<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_cart"
            android:icon="@drawable/cart"
            android:iconTint="@android:color/white"
            android:title="@string/cart"/>
        <item
            android:id="@+id/nav_order"
            android:icon="@drawable/order"
            android:iconTint="@android:color/black"
            android:title="@string/order"/>
        <item
            android:id="@+id/nav_category"
            android:icon="@drawable/category"
            android:iconTint="@android:color/black"
            android:title="@string/category"/>
        <item
            android:id="@+id/nav_setting"
            android:icon="@drawable/setting"
            android:iconTint="@android:color/black"
            android:title="@string/setting"/>
        <item
            android:id="@+id/nav_logout"
            android:icon="@drawable/logout"
            android:iconTint="@android:color/black"
            android:title="@string/logout"/>


    </group>
</menu>